--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,13 +8,12 @@ body {
 }
 
 .header {
-  margin: 0;
-  color: #505050;
-  font-size: 45px !important;
-  font-weight: 900;
-  font-family: 'Mukta Vaani', sans-serif;
+    margin: 0;
+    color: #505050;
+    font-size: 46px;
+    font-weight: 900;
+    font-family: 'Mukta Vaani', sans-serif;
 }
-
 .card {
   width: 30%;
   float: left;
@@ -42,19 +41,19 @@ body {
   -moz-box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 1px 35px 0px rgba(0, 0, 0, 0.3);
 }
-.card:hover .image img,
-.hover .image img {
+.card:hover .card-image img,
+.hover .card-image img {
   -webkit-transform: scale(1.1);
   -moz-transform: scale(1.1);
   transform: scale(1.1);
   opacity: .6;
 }
-.card .image {
+.card .card-image {
   background: #000000;
   height: 325px;
   overflow: hidden;
 }
-.card .image img {
+.card .card-image img {
   display: block;
   width: 120%;
   -webkit-transition: all 0.3s linear 0s;
@@ -103,13 +102,22 @@ h2 {
   font-weight: 400;
   line-height: 1.4em;
 }
+
+h3 {
+  margin: 0;
+  padding: 0 0 5px;
+}
 p {
+  margin: 0;
+  padding: 0 0 5px;
   display: block;
   color: #666666;
   font-size: 14px;
   line-height: 1.5em;
 }
 a {
+  margin: 0;
+  padding: 0 0 5px;
   color: #ff9012 !important;
   text-decoration: none;
 }
@@ -124,4 +132,14 @@ a {
   content: '';
   display: table;
   clear: both;
+}
+
+.avatar {
+    float: left;
+    margin-top: 1em;
+    margin-right: 1em;
+    position: relative;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
 }
