adds show method for Contact

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <ng-container *ngFor="let contact of toIterable(contacts)" class="container">
-  <div class="card">
+  <div class="card" (click)="showContact(contact.id)">
    <div class="card-image">
      <img src="{{contact.image}}" />
    </div>
