extract api calls to contact service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </h1>
 </div>
 
-<ng-container *ngFor="let contact of toIterable(contacts)" class="container">
+<ng-container *ngFor="let contact of contacts" class="container">
   <div class="card" (click)="showContact(contact.id)">
    <div class="card-image">
      <img src="{{contact.image}}" />
